# sample-strands-agents-chat

./: .gitignore  DETAILED_DOCUMENTATION.md  README.md  WEATHER_SETUP_GUIDE.md  pre_check.sh
.github/workflows/: ci.yml
.kiro/steering/: product.md  structure.md  tech.md
api/: .gitignore  Dockerfile  config.py  database.py  main.py  models.py  pyproject.toml  run.sh  s3.py  tools.py  utils.py
api/routers/: chat.py  file.py  gallery.py  streaming.py
api/services/: chat_service.py  streaming_service.py  tool_selection_service.py
cdk/: .gitignore  .prettierrc.json  eslint.config.mjs  package-lock.json  package.json  parameter.template.ts  parameter.types.ts
cdk/edge/originRequest/: index.ts  package-lock.json  package.json
cdk/lib/: strands-chat-stack.ts  waf-stack.ts
web/: .gitignore  index.html  package-lock.json  package.json  setup-env.sh  tailwind.config.ts  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AuthWithUserPool.css  AuthWithUserPool.tsx  Drawer.tsx  GalleryImage.tsx  Header.tsx  Loading.tsx  Markdown.tsx  Message.tsx  ModelBottomSheet.tsx  ModelDropdown.tsx  Textarea.tsx  ToolIcon.tsx  ToolIconsList.tsx  ToolsBottomSheet.tsx  Tooltip.tsx
web/src/contexts/: ConfigContext.tsx  ParameterContext.tsx  ThemeContext.tsx
web/src/hooks/: useApi.ts  useAutoMode.ts  useChatApi.ts  useChatState.ts  useChatStream.ts  useChats.ts  useConfig.ts  useCopy.ts  useFile.ts  useGallery.ts  useGalleryApi.ts  usePagination.ts  useParameter.ts  useScreen.ts  useToolSelection.ts  useUser.ts
web/src/pages/: Chat.tsx  Gallery.tsx
web/src/swr/: index.ts
web/src/types/: config.ts  index.ts  parameter.ts  theme.ts
web/src/utils/: deviceDetection.ts
