[project]
name = "api"
version = "0.1.0"
description = "API server of strands chat"
requires-python = ">=3.13"
dependencies = [
  "strands-agents==1.10.0",
  "strands-agents-tools[agent_core_code_interpreter, agent_core_browser]==0.2.9",
  "boto3==1.40.46",
  "mcp==1.16.0",
  "fastapi==0.118.0",
  "uvicorn==0.37.0",
  "pydantic==2.11.10",
  "requests==2.32.5",
  "awslabs.nova-canvas-mcp-server==1.0.6",
  "awslabs.aws-documentation-mcp-server==1.1.8"
]

[dependency-groups]
lint = [
  "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py313"
line-length = 500

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["api"]